--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                                 <ul class="portfolio_filter">
                                     <li><a href="" class="active" data-filter="*">All</a></li>
                                     <li><a href="" data-filter=".brand1">오독오독</a></li>
+                                    <li><a href="" data-filter=".brand2">향솔</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -228,6 +229,21 @@
                                         <p>project1</p>
                                         <h3>오독오독</h3>
                                         <p class="subject">Video</p>
+                                    </div>
+                                </a>
+                            </div>
+                            <!-- end single work -->
+
+                            <!-- single work -->
+                            <div class="col-md-4 col-sm-6 brand2">
+                                <a href="https://chaeyuns.github.io/hyangsole/" target="_blank">
+                                    <div class="portfolio_item">
+                                        <img src="img/portfolio/08.jpg" alt="image" class="img-responsive" />
+                                    </div>
+                                    <div class="pj_text_box clearfix">
+                                        <p>project2</p>
+                                        <h3>향솔</h3>
+                                        <p class="subject">Website</p>
                                     </div>
                                 </a>
                             </div>
