--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 
                 <div class="h-1">CERTIFICATE</div>
                 <div class="h-3">
-                    GTQ그래픽기술자격 1급
+                    GTQ그래픽기술자격 1급<br>
+                    운전면허 2종보통
                 </div>
             </div>
             <div class="col-md-6 about-img-div">
@@ -282,7 +283,7 @@
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">2018. 02 - 2020. 05 </p>
-                            <h3>마리웨일 마카롱 근무</h3>
+                            <h3>마리웨일 마카롱 근무 <span>매장 관리, 고객 응대</span></h3>
 
                         </div>
                     </li>
@@ -290,7 +291,7 @@
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
                             <p class="timeline-event-thumbnail">2021. 07 - 2022. 02</p>
-                            <h3>윈팩 근무</h3>
+                            <h3>윈팩 근무 <span>품질 검사</span></h3>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
